[project]
name = "health-canada-client"
version = "0.1.0"
description = "Python client to query and bulk-download Health Canada open datasets (BDPP, LNHPD, MDALL, …)"
authors = [
    {name = "Jean-Félix Charest",email = "jean-felix.charest@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2,<3)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "typer[all] (>=0.16.0,<0.17.0)"
]

[tool.poetry]
packages = [{ include = "health_canada", from = "src" }]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
ruff = "^0.11.13"
mypy = "^1.16.0"
respx = "^0.22.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
